--- a/src/main/webapp/membership/change_membership.xhtml
+++ b/src/main/webapp/membership/change_membership.xhtml
@@ -8,10 +8,10 @@
 
     <body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/membership/administration.xhtml">
 
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
 
                 <p:panel header="Change Membership" style="width: 100%" >
                     <table style="width: 100%" class="alignTop">
