--- a/src/main/webapp/membership/relation/List.xhtml
+++ b/src/main/webapp/membership/relation/List.xhtml
@@ -6,10 +6,10 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/resources/template/template.xhtml">
+    <ui:composition template="/membership/administration.xhtml">
 
 
-        <ui:define name="content">
+        <ui:define name="subcontent">
             <h:form id="RelationListForm">
                 <p:panel header="Manage Relations">
                     <p:dataTable id="datalist" value="#{relationController.items}" var="item"
