--- a/src/main/webapp/store/asset_category/List.xhtml
+++ b/src/main/webapp/store/asset_category/List.xhtml
@@ -6,9 +6,9 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/resources/template/template.xhtml">
+    <ui:composition template="/store/store_admin.xhtml">
 
-        <ui:define name="content">
+        <ui:define name="subcontent">
             <h:outputStylesheet library="css" name="jsfcrud.css"/>
             <p:growl id="growl"  ></p:growl>
             <h:form id="AssetCategoryListForm">
