--- a/src/main/webapp/store/store_item_import_with_stock.xhtml
+++ b/src/main/webapp/store/store_item_import_with_stock.xhtml
@@ -1,12 +1,12 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/store/store_admin.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core">
 
-    <ui:define name="content">
+    <ui:define name="subcontent">
         <h:form enctype="multipart/form-data">
             <h:outputLabel value="Import Pharmaceutical Items With Stocks" ></h:outputLabel>
             <p>Please make sure the following order of Columns.</p>
