--- a/src/main/webapp/store/store_search_issue_bill_item_error.xhtml
+++ b/src/main/webapp/store/store_search_issue_bill_item_error.xhtml
@@ -7,8 +7,8 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/store/store_admin.xhtml">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel>
                         <f:facet name="header" >
