--- a/src/main/webapp/pharmacy/pharmacy_report_category_vice_movement_item_batch.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_category_vice_movement_item_batch.xhtml
@@ -1,13 +1,13 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/pharmacy/pharmacy_summery_index.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core"
                 >
 
-    <ui:define name="content">
+    <ui:define name="subcontent">
         <h:form>
             <p:panel id="panelPrint" styleClass="noBorder summeryBorder" header="Movement Report Stock by Date by Batch">
                 <h:panelGrid columns="2" styleClass="noPrintButton">
