--- a/src/main/webapp/pharmacy/pharmacy_report_grn_registory.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_grn_registory.xhtml
@@ -10,8 +10,8 @@
       xmlns:se="http://java.sun.com/jsf/composite/pharmacy/search">
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/pharmacy/pharmacy_summery_index.xhtml">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel id="gpBillPreview">
                         <f:facet name="header" >
