--- a/src/main/webapp/membership/administration.xhtml
+++ b/src/main/webapp/membership/administration.xhtml
@@ -21,7 +21,7 @@
                     <div class="row">
                         <div class="col-md-3">
                             <h:form>
-                                <p:accordionPanel>
+                                <p:accordionPanel activeIndex="#{membershipController.membershipAdminIndex}">
                                     <p:tab title="Manage Membersip Data" >
                                         <div class="d-grid gap-2">
                                             <p:commandButton class="w-100" ajax="false" value="Change Membership" 
