--- a/src/main/webapp/pharmacy/pharmacy_admin.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_admin.xhtml
@@ -12,7 +12,7 @@
                     <div class="row">
                             <div class="col-md-3">
                                 <h:form >
-                                    <p:accordionPanel >
+                                    <p:accordionPanel activeIndex="#{PharmacyController.pharmacyAdminIndex}">
                                         <p:tab title="Medicines">
                                             <div class="d-grid gap-2">
                                             <p:commandButton class="w-100" ajax="false" value="Categories" action="pharmacy_pharmaceutical_item_category" />
