--- a/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
@@ -16,7 +16,7 @@
                     <div class="row">
                         <div class="col-md-3">
                             <h:form>
-                                <p:accordionPanel>
+                                <p:accordionPanel activeIndex="#{pharmacyController.pharmacySummaryIndex}">
                                     <p:tab title="1) Cashier Reports">
                                         <div class="d-grid gap-2">
                                             <p:commandButton class="w-100" ajax="false" value="1) Cashier Report" action="/reportCashier/report_cashier_detailed_by_user.xhtml" actionListener="#{commonReport.recreteModal}"/>
