--- a/src/main/webapp/store/store_report_unit_issue_bill_1.xhtml
+++ b/src/main/webapp/store/store_report_unit_issue_bill_1.xhtml
@@ -9,9 +9,8 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
-
-            <ui:define name="content">
+        <ui:composition template="/store/store_summery_index.xhtml">                        
+            <ui:define name="subcontent">
                 <h:form>
 
                     <p:panel header="Unit Issue Category Wise Summery" >
