--- a/src/main/webapp/store/store_report_unit_issue_department_by_departmaent.xhtml
+++ b/src/main/webapp/store/store_report_unit_issue_department_by_departmaent.xhtml
@@ -9,9 +9,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition  template="/store/store_summery_index.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
 
                     <p:panel header="Unit Issue Report" >
