--- a/src/main/webapp/store/store_unit_report_by_item.xhtml
+++ b/src/main/webapp/store/store_unit_report_by_item.xhtml
@@ -8,9 +8,8 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
-
-            <ui:define name="content">
+        <ui:composition template="/store/store_summery_index.xhtml">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel header=" Issue Report">
                         <h:panelGrid columns="2" >
