Closes issue #606 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/webcontent/index.xhtml
+++ b/src/main/webapp/webcontent/index.xhtml
@@ -49,6 +49,22 @@
                                                 icon="pi pi-list"></p:commandButton>
 
                             </div>
+                            
+                            <div class="col" >
+                                <p:commandButton ajax="false" 
+                                                 class="btn btn-primary m-2 w-75" 
+                                                 action="#{designComponentController.navigateToAddDesignComponent()}"
+                                                 value="Add New Design Componant" icon="pi pi-plus"></p:commandButton>
+                            </div>
+
+                             <div class="col" >
+                               <p:commandButton ajax="false" 
+                                                class="btn btn-primary m-2 w-75" 
+                                                action="#{designComponentController.navigateToListDesignComponent()}" 
+                                                value="List Design Componants" 
+                                                icon="pi pi-list"></p:commandButton>
+
+                            </div>
 
 
 
