--- a/src/main/webapp/webcontent/index.xhtml
+++ b/src/main/webapp/webcontent/index.xhtml
@@ -65,8 +65,24 @@
                                                 icon="pi pi-list"></p:commandButton>
 
                             </div>
+                            
+                             <div class="col" >
+                                <p:commandButton ajax="false" 
+                                                 class="btn btn-primary m-2 w-75" 
+                                                 action="#{captureComponentController.navigateToAddCaptureComponent()}"
+                                                 value="Add New Capture Componant" icon="pi pi-plus"></p:commandButton>
+                            </div>
 
+                             <div class="col" >
+                               <p:commandButton ajax="false" 
+                                                class="btn btn-primary m-2 w-75" 
+                                                action="#{captureComponentController.navgateToListCaptureComponents()}" 
+                                                value="List Capture Componants" 
+                                                icon="pi pi-list"></p:commandButton>
 
+                            </div>
+
+                    
 
                             <div class="col" >
                                 <h:commandButton class="btn btn-primary m-2 w-75" value="Add New Short Contents" action="#{webContentController.toAddNewWebContent()}" ></h:commandButton>
