Signed-off-by: thamararangana <mpnew2@gmail.com>

--- a/src/main/webapp/forms/add.xhtml
+++ b/src/main/webapp/forms/add.xhtml
@@ -11,7 +11,7 @@
 
             <ui:define name="contents">
 
-                <h1>Template Component</h1>
+                <h1>Assignment Component</h1>
 
 
                 <h:form class="form" >
@@ -29,10 +29,7 @@
                     <p:commandButton ajax="false" value="Save" action="#{ComponentAsignmentController.saveCurrent()}" >
                     </p:commandButton>
 
-
                 </h:form>
-
-
 
             </ui:define>
 
