Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/webcontent/capture_component.xhtml
+++ b/src/main/webapp/webcontent/capture_component.xhtml
@@ -7,7 +7,7 @@
 
     <body>
 
-        <ui:composition template="./index.xhtml">
+        <ui:composition template="/webcontent/index.xhtml">
 
             <ui:define name="contents">
 
