--- a/src/main/webapp/webcontent/index.xhtml
+++ b/src/main/webapp/webcontent/index.xhtml
@@ -53,15 +53,15 @@
                             <div class="col" >
                                 <p:commandButton ajax="false" 
                                                  class="btn btn-primary m-2 w-75" 
-                                                 action="#{designComponentController.navigateToAddDesignComponent()}"
-                                                 value="Add New Design Componant" icon="pi pi-plus"></p:commandButton>
+                                                 action="#{designComponentController.navigateToAddNewDataEntryForm()}"
+                                                 value="Add New Data Entry Componant" icon="pi pi-plus"></p:commandButton>
                             </div>
 
                              <div class="col" >
                                <p:commandButton ajax="false" 
                                                 class="btn btn-primary m-2 w-75" 
-                                                action="#{designComponentController.navigateToListDesignComponent()}" 
-                                                value="List Design Componants" 
+                                                action="#{designComponentController.navigateToListDataEntryForms()}" 
+                                                value="List Data Entry Forms" 
                                                 icon="pi pi-list"></p:commandButton>
 
                             </div>
@@ -69,8 +69,8 @@
                              <div class="col" >
                                 <p:commandButton ajax="false" 
                                                  class="btn btn-primary m-2 w-75" 
-                                                 action="#{captureComponentController.navigateToAddCaptureComponent()}"
-                                                 value="Add New Capture Componant" icon="pi pi-plus"></p:commandButton>
+                                                 action="#{captureComponentController.navigateToSelectDataEntryForm()}"
+                                                 value="Start Data Entry" icon="pi pi-plus"></p:commandButton>
                             </div>
 
                              <div class="col" >
