--- a/src/main/webapp/resources/ezcomp/web_header.xhtml
+++ b/src/main/webapp/resources/ezcomp/web_header.xhtml
@@ -15,68 +15,190 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <link type="text/css" rel="stylesheet" href="#{request.contextPath}/resources/css/html5up-hyperspace/main.css" />
+        <link rel="stylesheet" type="text/css" href="#{request.contextPath}/resources/css/html5up-hyperspace/main.css" />
 
-        <h:outputStylesheet library="css/html5up-hyperspace" name="main.css"/>
+        <!-- Include JavaScript files -->
+        <h:outputScript library="js/html5up-hyperspace" name="jquery.min.js" />
+        <h:outputScript library="js/html5up-hyperspace" name="jquery.scrollex.min.js" />
+        <h:outputScript library="js/html5up-hyperspace" name="jquery.scrolly.min.js" />
+        <h:outputScript library="js/html5up-hyperspace" name="browser.min.js" />
+        <h:outputScript library="js/html5up-hyperspace" name="breakpoints.min.js" />
+        <h:outputScript library="js/html5up-hyperspace" name="util.js" />
+        <h:outputScript library="js/html5up-hyperspace" name="main.js" />
 
-        <h:outputScript library="js/html5up-hyperspace" name="jquery.min.js" target="head" />
-        <h:outputScript library="js/html5up-hyperspace" name="jquery.scrollex.min.js" target="head" />
-        <h:outputScript library="js/html5up-hyperspace" name="jquery.scrolly.min.js" target="head" />
-        <h:outputScript library="js/html5up-hyperspace" name="browser.min.js" target="head" />
-        <h:outputScript library="js/html5up-hyperspace" name="breakpoints.min.js" target="head" />
-        <h:outputScript library="js/html5up-hyperspace" name="util.js" target="head" />
-        <h:outputScript library="js/html5up-hyperspace" name="main.js" target="head" />
+        <h:body>
+            <!-- Sidebar -->
+            <div id="sidebar">
+                <div class="inner">
+                    <h:form>
+                        <nav>
+                            <ul>
+                                <li><a href="#intro">Welcome</a></li>
+                                <li><a href="#one">Who we are</a></li>
+                                <li><a href="#two">What we do</a></li>
+                                <li><a href="#three">Get in touch</a></li>
+                            </ul>
+                        </nav>
+                    </h:form>
+                </div>
+            </div>
 
-        <!-- Sidebar -->
-        <h:panelGroup id="sidebar">
-            <h:panelGroup class="inner">
-                <h:form>
-                    <h:commandLink value="Welcome" action="#intro" />
-                    <h:commandLink value="Who we are" action="#one" />
-                    <h:commandLink value="What we do" action="#two" />
-                    <h:commandLink value="Get in touch" action="#three" />
-                </h:form>
-            </h:panelGroup>
-        </h:panelGroup>
+            <!-- Wrapper -->
+            <div id="wrapper">
+                <!-- Intro -->
+                <div id="intro" class="wrapper style1 fullscreen fade-up">
+                    <h:outputText value="Hyperspace" />
+                    <h:outputText value="Just another fine responsive site template designed by HTML5 UP and released for free under the Creative Commons." />
+                    <h:commandLink value="Learn more" action="#one" />
+                </div>
 
-        <!-- Wrapper -->
-        <h:panelGroup id="wrapper">
+                <!-- One -->
+                <div id="one" class="wrapper style2 spotlights">
+                    <!-- First Section -->
 
-            <!-- Intro -->
-            <h:panelGroup id="intro" styleClass="wrapper style1 fullscreen fade-up">
-                <h:outputText value="Hyperspace" />
-                <h:outputText value="Just another fine responsive site template designed by HTML5 UP and released for free under the Creative Commons." />
-                <h:commandLink value="Learn more" action="#one" />
-            </h:panelGroup>
-
-            <!-- One -->
-            <h:panelGroup id="one" styleClass="wrapper style2 spotlights">
-                <!-- First Section -->
-                <h:panelGroup>
                     <h:graphicImage library="images/html5up-hyperspace" name="pic01.jpg" />
-                    <h:outputText value="Sed ipsum dolor" />
-                    <h:outputText value="Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus." />
-                    <h:commandLink value="Learn more" action="generic.html" />
-                </h:panelGroup>
+                    <div class="content">
+                        <div class="inner">
+                            <h:outputText value="Sed ipsum dolor" />
+                            <h:outputText value="Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus." />
+                            <h:commandLink value="Learn more" action="generic.html" />
+                        </div>
+                    </div>
 
-                <!-- Second Section -->
-                <h:panelGroup>
-                    <h:graphicImage library="images/html5up-hyperspace" name="pic02.jpg" />
-                    <h:outputText value="Feugiat consequat" />
-                    <h:outputText value="Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus." />
-                    <h:commandLink value="Learn more" action="generic.html" />
-                </h:panelGroup>
+                    <!-- Second Section -->
 
-                <!-- Third Section -->
-                <h:panelGroup>
                     <h:graphicImage library="images/html5up-hyperspace" name="pic02.jpg" />
-                    <h:outputText value="Ultricies aliquam" />
-                    <h:outputText value="Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus." />
-                    <h:commandLink value="Learn more" action="generic.html" />
-                </h:panelGroup>
-            </h:panelGroup>
-            <!-- Two -->
-            <!-- And so on... -->
-        </h:panelGroup>
+                    <div class="content">
+                        <div class="inner">
+                            <h:outputText value="Feugiat consequat" />
+                            <h:outputText value="Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus." />
+                            <h:commandLink value="Learn more" action="generic.html" />
+                        </div>
+                    </div>
+
+                    <!-- Third Section -->
+
+                    <h:graphicImage library="images/html5up-hyperspace" name="pic02.jpg" />
+                    <div class="content">
+                        <div class="inner">
+                            <h:outputText value="Ultricies aliquam" />
+                            <h:outputText value="Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus." />
+                            <h:commandLink value="Learn more" action="generic.html" />
+                        </div>
+                    </div>
+                </div>
+
+                <div id="two" class="wrapper style3 fade-up">
+                    <div class="inner">
+                        <h2>What we do</h2>
+                        <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+                        <div class="features">
+                            <section>
+                                <span class="icon solid major fa-code"></span>
+                                <h3>Lorem ipsum amet</h3>
+                                <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+                            </section>
+                            <section>
+                                <span class="icon solid major fa-lock"></span>
+                                <h3>Aliquam sed nullam</h3>
+                                <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+                            </section>
+                            <section>
+                                <span class="icon solid major fa-cog"></span>
+                                <h3>Sed erat ullam corper</h3>
+                                <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+                            </section>
+                            <section>
+                                <span class="icon solid major fa-desktop"></span>
+                                <h3>Veroeros quis lorem</h3>
+                                <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+                            </section>
+                            <section>
+                                <span class="icon solid major fa-link"></span>
+                                <h3>Urna quis bibendum</h3>
+                                <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+                            </section>
+                            <section>
+                                <span class="icon major fa-gem"></span>
+                                <h3>Aliquam urna dapibus</h3>
+                                <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+                            </section>
+                        </div>
+                        <ul class="actions">
+                            <li><h:commandLink value="Learn more" action="generic.html" class="button" /></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Three -->
+                <section id="three" class="wrapper style1 fade-up">
+                    <div class="inner">
+                        <h2>Get in touch</h2>
+                        <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+                        <div class="split style1">
+                            <section>
+                                <form method="post" action="#">
+                                    <div class="fields">
+                                        <div class="field half">
+                                            <label for="name">Name</label>
+                                            <input type="text" name="name" id="name" />
+                                        </div>
+                                        <div class="field half">
+                                            <label for="email">Email</label>
+                                            <input type="text" name="email" id="email" />
+                                        </div>
+                                        <div class="field">
+                                            <label for="message">Message</label>
+                                            <textarea name="message" id="message" rows="5"></textarea>
+                                        </div>
+                                    </div>
+                                    <ul class="actions">
+                                        <li><a href="" class="button submit">Send Message</a></li>
+                                    </ul>
+                                </form>
+                            </section>
+                            <section>
+                                <ul class="contact">
+                                    <li>
+                                        <h3>Address</h3>
+                                        <span>12345 Somewhere Road #654<br />
+                                            Nashville, TN 00000-0000<br />
+                                            USA</span>
+                                    </li>
+                                    <li>
+                                        <h3>Email</h3>
+                                        <a href="#">user@untitled.tld</a>
+                                    </li>
+                                    <li>
+                                        <h3>Phone</h3>
+                                        <span>(000) 000-0000</span>
+                                    </li>
+                                    <li>
+                                        <h3>Social</h3>
+                                        <ul class="icons">
+                                            <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                                            <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+                                            <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                                            <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                                            <li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </section>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- Footer -->
+                <footer id="footer" class="wrapper style1-alt">
+                    <div class="inner">
+                        <ul class="menu">
+                            <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                        </ul>
+                    </div>
+                </footer>
+
+            </div>
+        </h:body>
     </cc:implementation>
 </html>
